--- a/login_project.html
+++ b/login_project.html
@@ -17,8 +17,8 @@
 <body data-theme="dark">
     <header>
         <nav class="title_bar">
-                <img src="./ECELL_logo.png" 
-                alt="CSA-logo" width = 230px height = 90px>
+                <img src="./crux-logo.png" 
+                alt="Crux-logo" width = 140px height = 90px>
 
 
                 <button class = "buttons">Esummit</button>
